--- a/devslopes_course_app/android/app/src/main/AndroidManifest.xml
+++ b/devslopes_course_app/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
          FlutterApplication and put your custom class here. -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="devslopes_course_app"
